css/universal.css
@import url('https://fonts.googleapis.com/css?family=Roboto:300,400');

:root {
    --main-bg-color: #303030;
    --sub1-bg-color: #363636;
    --sub2-bg-color: #404040;
    --main-text-color: #FFFFFF;
    --sub-text-color: #C6C6C6;
    --notdone-color: #FF3B30;
    --done-color: #28CD3C;
}

@import url('https://fonts.googleapis.com/css?family=Roboto');

body {
    background-color: var(--main-bg-color);
    font-family: Roboto;
    color: var(--main-text-color);
    margin: 0;
}

p {
    margin: 0;
}

.nav {
    width: 100%;
    height: 50px;
    background-color: var(--sub1-bg-color);
    box-shadow: 0px 2px 4px #000000;
    position: fixed;
    top: 0;
}

.container {
    margin-top: calc(50px + 2.5%);
}

.box-container {
    width: 95%;
    background-color: var(--sub2-bg-color);
    box-shadow: 0px 2px 2px #000000;
    border-radius: 8px;
    margin: 2.5% auto;
    overflow: hidden;
}

.title {
    margin: 0;
    font-size: 22pt;
    font-weight: 300;
}

.title--nav {
    line-height: 50px;
    text-align: center;
}

p.content {
    color: var(--sub-text-color);
    font-weight: 300;
    font-size: 11pt;
}

.box-bottom {
    background-color: var(--sub1-bg-color);
    overflow: hidden;
    padding: 5px;
}

.box-top {
    background-color: var(--sub1-bg-color);
    overflow: hidden;
    padding: 5px;
}

.dropdown-icon {
    background-image: url("../image/down-arrow.png");
}

.container {
    text-align: left;
}


.setting-button {
	display: inline-block;
}

.close-button {
	float: right;
	padding-top:5px;
	padding-right: 8px;
}

.close-button-img {
	border: 1.5px solid #FFFFFF;
	border-radius: 5px;
	padding: 2.5px;
}


/** TASK LIST **/
.title--task {
    font-size: 16pt;
}

.box-container--task {
    min-height: 110px;
}

.box-bottom > .content--number-of-people {
    float: left;
    background-color: var(--sub2-bg-color);
    padding: 5px;
    margin-right: 5px;
    border-radius: 5px;
}

.box-bottom > .content--due-date {
    float: right;
    padding: 5px;
}

.title--task {
    margin: 10px;
}

.content--task {
    margin: 10px 10px 10px 11px;
}

.dropdown-icon--task {
    width: 10px;
    height: 10px;
    margin-left: 5px;
    display: inline-block;
    background-size: cover;
}

#in-progress-people {
    color: var(--notdone-color);
}

#done-people {
    color: var(--done-color);
}

.checkbox-not-done {
    color: var(--notdone-color);
}

.checkbox-done {
    color: var(--done-color);
}

.task-left-side {
    width: calc(100% - 70px);
}

.checkbox {
    position: relative;
    float: right;
    top: 16.5px;
    right: 10px;
    width: 40px;
    height: 40px;
    background-size: cover;
}

.checkbox-not-checked {
    background-image: url("../image/notdone-checkbox-icon.png");   
}

.checkbox-checked {
    background-image: url("../image/done-checkbox-icon.png");   
}




/** Landing Page **/
.title--landing-page{
	font-size: 40pt;
	text-align: center;
	margin-top: 40px;
}

.body--landing-page {
	margin: 20px;
	font-size: 13pt;
}

.checkbox--landing-page {
	float: left;
	clear: left;
	position: unset;
	margin: 10px;
}

.nfinished--landing-page {
	float: left;
	height: 100px;
	
}

/** Preference **/
.box-container--preference {
	padding: 10px;
	height: 30px;
}

.theme-option--preference {
	width: 50%;
	float: left;
	text-align: center;
}
.content--preference{
	font-size: 15pt;
	font-weight: 250;
}

.checkbox--preference {
	width: 10px;
	height: 10px;
	background-color: #FFFFFF;
	border: 1px solid #000000;
	display: inline-block;
	margin-right: 5px;
}

.edit-icon--preference {
	padding-top: 5px;
	float: right;
	vertical-align: middle;
}

.group-box-content--preference {
	height: 150px;
	overflow: scroll;
}

.group--preference {
	border-bottom: 2px solid var(--sub1-bg-color);
	width: 98%;
	margin: 0 auto;
	padding-top: 8px;
	padding-bottom: 8px;
}

.group-option--preference {
	float: right;
	padding-top: 4px;
}
.exit_gorup--preference {
	text-decoration: underline;
}

.info--preference {
	float: right;
	padding-right: 2px;
	padding-left: 2px;
}

.preference--button {
	width: 90px;
	height: 35px;
	float: right;
	text-align: center;
	line-height: 35px;
	margin-right: 10px;
}

